# fluxpad

./: .gitattributes  .gitmodules  README.md
APP/: .gitattributes  .gitignore  common_enums.py  configurator.py  firmware_updater.py  fluxapp.py  fluxapp.spec  fluxpad_interface.py  requirements.txt  scancode_to_hid_code.py  tickscale.py  ttk_slider.py  use_sv_ttk.py
CAD/: .gitignore  001_ASSEMBLY.SLDASM  001_SWITCH_ASSEMBLY.SLDASM  002_KEYPAD_ASSEMBLY.SLDASM  003_PACKAGING_ASSEMBLY.SLDASM  004_SHEET_CASE.SLDASM  050_ASSEMBLY.SLDASM  050_MASTER_SKETCH.SLDPRT  051_PCB_ASSEMBLY.SLDASM  101_HOUSING.SLDPRT  102_STEM.SLDPRT  103_COVER.SLDPRT  110_CASE.SLDPRT  111_KNOB.SLDPRT  112_SPACER.SLDPRT  113_SHEET_SPACER.SLDPRT  114_SHEET_CASE.SLDPRT  115_SHEET_BOTTOM.SLDPRT  116_SHEET_DAMPER.SLDPRT  150_PLATE.SLDDRW  150_PLATE.SLDPRT  151_CASE.SLDDRW  151_CASE.SLDPRT  152_SPACER.SLDPRT  153_BOTTOM_PLATE.SLDDRW  153_BOTTOM_PLATE.SLDPRT  154_PAD.SLDDRW  154_PAD.SLDPRT  155_BACK_SPACER.SLDDRW  155_BACK_SPACER.SLDPRT  201_MAGNET_1x1.SLDPRT  202_MAGNET_3x.5.SLDPRT  203_SPRING_LeeSpring-LC 022BC 00M.SLDPRT  204_SPRING_1_PC018-240-6500-SST-0690-CG-N-IN.SLDPRT  205_SPRING_2_PC016-240-6250-MW-0690-CG-N-IN.SLDPRT  206_SPRING_3_PC016-240-6250-MW-0706-C-N-IN.SLDPRT  210_KEYCAP.SLDPRT  250_KNOB.SLDDRW  250_KNOB.SLDPRT  301_PCB.SLDPRT  (+24 more)
FW/fluxpad_rp2040/: CMakeLists.txt  TLE493D.h  rapid_trigger.h  sensor_adc.c  tusb_config.h  usb_task.c  usb_task.h
Tang/: CMakeLists.txt  TLE493D.c  main.c  rapid_trigger.c  sensor_adc.c  sensor_adc.h  sensor_task.h  usb_descriptors.c  usb_descriptors.h  (+2 more)
(+183 files in other folders)
